[package]
name = "gnss-sdr-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.144"
plotpy = "0.4.0"
spectrum-analyzer = "1.4.0"
ringbuffer = "0.14.0"
rustfft = "6.1.0"
realfft = "3.3.0"
signal-hook = "0.3.15"
quantiles = "0.7.1"
binrw = "0.11.2"
puruspe = "0.2.0"
rayon = "1.7.0"
itertools = "0.11.0"

[build-dependencies]
bindgen = "0.66.0"
