[package]
name = "gnss-sdr-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.144"
plotpy = "0.4.0"
spectrum-analyzer = "1.4.0"
rustfft = "6.1.0"
realfft = "3.3.0"
signal-hook = "0.3.15"
quantiles = "0.7.1"
binrw = "0.13.2"
puruspe = "0.2.0"
rayon = "1.7.0"
itertools = "0.12.0"
once_cell = "1.18.0"
tokio = { version = "1.29.1", features = ["full"] }
async-ffi = {version = "0.5.0", features = ["macros"]}
ctrlc = {version="3.4.0", features = ["termination"]}
byteorder = "1.3.3"
slice_ring_buf = "0.2.0"
num = "0.4.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.18.1"
chrono = "0.4.31"
flate2 = "1.0"

[build-dependencies]
bindgen = "0.69.1"
